[package]
name = "hunter_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "hunter_sim_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hunter-sim"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
